<resources>
    <string name="app_name">qBittorrent Client</string>
    <string name="app_shortname">Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_resume_all">Resume all</string>
    <string name="action_pause_all">Pause all</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_drive">Delete data</string>
    <string name="action_increase_priority">Increase priority</string>
    <string name="action_decrease_priority">Decrease priority</string>
    <string name="action_maximum_priority">Move to top</string>
    <string name="action_minimum_priority">Move to bottom</string>
    <string name="action_download_rate_limit">Download rate limit</string>
    <string name="action_upload_rate_limit">Upload rate limit</string>
    <string name="action_force_recheck">Force recheck</string>
    <string name="connection_error">Network connection failed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="connecting">Refreshing</string>
    <string name="title_activity_torrent_actions">Action</string>
    <string name="dm_deleteTorrent">Pressing OK will delete the torrent</string>
    <string name="dt_deleteTorrent">Delete torrent</string>
    <string name="dm_deleteDriveTorrent">Pressing OK will delete the torrent and its data from the hard drive</string>
    <string name="dt_deleteDriveTorrent">Delete the torrent and its data</string>
    <string name="torrentAdded">Torrent sent!</string>
    <string name="torrentFileAdded">Torrent file sent!</string>
    <string name="torrentStarted">Torrent started!</string>
    <string name="torrentPaused">Torrent paused!</string>
    <string name="AllTorrentsPaused">All torrents were paused!</string>
    <string name="AllTorrentsResumed">All torrents were resumed!</string>
    <string name="torrentDeleted">Torrent deleted!</string>
    <string name="torrentDeletedDrive">Torrent and data deleted!</string>
    <string name="increasePrioTorrent">Priority increased!</string>
    <string name="decreasePrioTorrent">Priority decreased!</string>
    <string name="priorityUpdated">Priority updated!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="getQBittorrentPrefefrences">Getting options...</string>
    <string name="setQBittorrentPrefefrences">Options saved</string>
    <string name="setUploadRateLimit">Upload rate limit set</string>
    <string name="setDownloadRateLimit">Download rate limit set</string>
    <string name="error">Error</string>
    <string name="error1">The host or IP address cannot be reached. Please check your settings!</string>
    <string name="error401">Unauthorized access. Check your account settings to avoid bans!</string>
    <string name="error403">Authentication error</string>
    <string name="info">Warning</string>
    <string name="global_value_error">Global value cannot be retrieved. Please check your connection settings!</string>
    <string name="navigation_drawer_all">All</string>
    <string name="navigation_drawer_downloading">Downloading</string>
    <string name="navigation_drawer_completed">Completed</string>
    <string name="navigation_drawer_paused">Paused</string>
    <string name="navigation_drawer_active">Active</string>
    <string name="navigation_drawer_inactive">Inactive</string>
    <string name="navigation_drawer_options">Options</string>
    <string name="navigation_drawer_settins">Settings</string>
    <string name="navigation_drawer_PRO">Get PRO</string>
    <string name="about_help1">To start using the client, set your qBittorrent server\'s settings and account by selecting \'Settings\' from the left drawer menu</string>
    <string name="about_help2">Press the refresh button on the menu to get new results, or choose an option from the drawer menu to get the torrent list from the server.</string>
    <string name="about_motto">Manage all your torrents from Android using qBittorrent Client</string>
    <string name="icon">icon</string>
    <string name="no_results">No torrents found</string>
    <string name="tablet_help">Use the drawer menu to choose an option</string>
    <string name="torrent_details_size">Size:</string>
    <string name="torrent_details_properties">Properties</string>
    <string name="torrent_details_content">Files</string>
    <string name="torrent_details_trackers">Trackers</string>
    <string name="torrent_details_general_info">General info</string>
    <string name="torrent_details_save_path">Save path:</string>
    <string name="torrent_details_ratio">Ratio:</string>
    <string name="torrent_details_eta">Eta:</string>
    <string name="torrent_details_priority">Priority:</string>
    <string name="torrent_details_downloadSpeed">Download Speed:</string>
    <string name="torrent_details_uploadSpeed">Upload Speed:</string>
    <string name="torrent_details_leechs">Leeches:</string>
    <string name="torrent_details_seeds">Seeds:</string>
    <string name="torrent_details_state">State:</string>
    <string name="torrent_details_progress">Progress:</string>
    <string name="torrent_details_torrent_hash">Torrent Hash:</string>
    <string name="torrent_details_torrent_sequential">Download in sequential order </string>
    <string name="torrent_details_torrent_first_last_piece_first">Download first and last piece first</string>
    <string name="torrent_details_created_date">Created Date:</string>
    <string name="torrent_details_comment">Comment:</string>
    <string name="torrent_details_upload_rate_limit">Upload Rate Limit:</string>
    <string name="torrent_details_download_rate_limit">Download Rate Limit:</string>
    <string name="torrent_details_total_wasted">Total wasted:</string>
    <string name="torrent_details_total_uploaded">Total Uploaded:</string>
    <string name="torrent_details_total_downloaded">Total Downloaded:</string>
    <string name="torrent_details_time_elapsed">Time Elapsed:</string>
    <string name="torrent_details_num_connections">Num. Connections:</string>
    <string name="torrent_details_share_ratio">Share Ratio:</string>
    <string name="torrent_details_first_last">First and last pieces</string>
    <string name="torrent_priority_menu">Priority...</string>
    <string name="torrent_details_seq_download">Sequential download</string>
    <string name="torrent_details_cant_general_info">General info couldn\'t be retrieved</string>
    <string name="settings_qbittorrent_account_category">Accounts</string>
    <string name="settings_qbittorrent_currentServer_title">Choose a qBittorrent server</string>
    <string name="settings_qbittorrent_currentServer_dialog_title">Choose a server</string>
    <string name="settings_qbittorrent_currentServer_summary">qBittorrent Server</string>
    <string name="settings_qbittorrent_hostname_title">Connection Host</string>
    <string name="settings_qbittorrent_hostname_summary">Hostname or IP</string>
    <string name="settings_qbittorrent_hostname_dialog_title">Hostname or IP?</string>
    <string name="settings_qbittorrent_hostname_hint">Example: 192.168.1.1</string>
    <string name="settings_qbittorrent_subfolder_title">Subfolder</string>
    <string name="settings_qbittorrent_subfolder_dialog_title">Subfolder? If in doubt, leave it blank!</string>
    <string name="settings_qbittorrent_https_title">Enable HTTPS</string>
    <string name="settings_qbittorrent_https_summary">Connect using https</string>
    <string name="settings_qbittorrent_port_title">Connection Port</string>
    <string name="settings_qbittorrent_port_summary">Port (80, 8080, etc)</string>
    <string name="settings_qbittorrent_port_dialog_title">Connection Port?</string>
    <string name="settings_qbittorrent_username_title">Username</string>
    <string name="settings_qbittorrent_username_summary">Provide username</string>
    <string name="settings_qbittorrent_username_dialog_title">Username?</string>
    <string name="settings_qbittorrent_password_title">Password</string>
    <string name="settings_qbittorrent_password_summary">Provide password</string>
    <string name="settings_qbittorrent_password_dialog_title">Password?</string>
    <string name="settings_qbittorrent_version_title">qBittorrent 2.x</string>
    <string name="settings_qbittorrent_version_summary">Use old qBittorrent server version</string>
    <string name="settings_qbittorrent_pro_title">Feature not available</string>
    <string name="settings_qbittorrent_pro_message">This feature is only available on qBittorrent PRO version!</string>
    <string name="settings_qbittorrent_autorefresh_category">Auto Refresh</string>
    <string name="settings_qbittorrent_autorefresh_title">Refresh automatically?</string>
    <string name="settings_qbittorrent_autorefresh_summary">Update torrent list</string>
    <string name="settings_qbittorrent_refresh_period_title">Refresh every...</string>
    <string name="settings_qbittorrent_timeouts_category">Timeouts</string>
    <string name="settings_qbittorrent_connection_timeout_title">Connection timeout</string>
    <string name="settings_qbittorrent_connection_timeout_summary">Timeout in seconds until a connection is established</string>
    <string name="settings_qbittorrent_connection_timeout_dialog_title">Connection timeout in seconds?</string>
    <string name="settings_qbittorrent_data_timeout_title">Data timeout</string>
    <string name="settings_qbittorrent_data_timeout_summary">Timeout in seconds to wait for data</string>
    <string name="settings_qbittorrent_data_timeout_dialog_title">Data timeout in seconds?</string>
    <string name="settings_qbittorrent_sort_category">Sort torrent list</string>
    <string name="settings_qbittorrent_sortby_summary">Sort by...</string>
    <string name="settings_qbittorrent_sortby_dialog_title">Sort by...</string>
    <string name="settings_qbittorrent_reverse_order_summary">Reverse order</string>
    <string name="settings_qbittorrent_reverse_order_dialog_title">Reverse order?</string>
    <string name="options_qbittorrent_connections_limits_category">Connections Limits</string>
    <string name="options_qbittorrent_global_max_connections_title">Global max connections</string>
    <string name="options_qbittorrent_global_max_connections_dialog_title">Global maximum number of connections?</string>
    <string name="options_qbittorrent_max_num_conn_per_torrent_title">Max num conn per torrent</string>
    <string name="options_qbittorrent_max_num_conn_per_torrent_dialog_title">Maximum number of connections per torrent?</string>
    <string name="options_qbittorrent_global_rate_limits_category">Global Rate Limits</string>
    <string name="options_qbittorrent_global_donwload_rate_title">Download rate</string>
    <string name="options_qbittorrent_global_donwload_rate_dialog_title">Global download rate (KiB/s)?</string>
    <string name="options_qbittorrent_global_upload_rate_title">Upload rate</string>
    <string name="options_qbittorrent_global_upload_rate_dialog_title">Global upload rate (KiB/s)?</string>
    <string name="options_qbittorrent_alternative_global_rate_limits_category">Alternative Global Rate Limits</string>
    <string name="options_qbittorrent_alternative_global_donwload_rate_title">Alternative download rate</string>
    <string name="options_qbittorrent_alternative_global_donwload_rate_dialog_title">Alternative global download rate (KiB/s)?</string>
    <string name="options_qbittorrent_alternative_global_upload_rate_title">Alternative upload rate</string>
    <string name="options_qbittorrent_alternative_global_upload_rate_dialog_title">Alternative global upload rate (KiB/s)?</string>
</resources>