<!--
  Copyright (c) 2014 Luis M. Gallardo D..
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Luis M. Gallardo D.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="Account"
        android:title="@string/settings_qbittorrent_account_category" >
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_qbittorrent_currentServer_dialog_title"
            android:entries="@array/qBittorrentServers"
            android:entryValues="@array/qBittorrentServersValues"
            android:key="currentServer"
            android:summary="@string/settings_qbittorrent_currentServer_summary"
            android:title="@string/settings_qbittorrent_currentServer_title" />

        <EditTextPreference
            android:defaultValue="192.168.1.1"
            android:dialogTitle="@string/settings_qbittorrent_hostname_dialog_title"
            android:key="hostname"
            android:summary="@string/settings_qbittorrent_hostname_summary"
            android:title="@string/settings_qbittorrent_hostname_title" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="@string/settings_qbittorrent_subfolder_dialog_title"
            android:key="subfolder"
            android:title="@string/settings_qbittorrent_subfolder_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="https"
            android:summary="@string/settings_qbittorrent_https_summary"
            android:title="@string/settings_qbittorrent_https_title" />

        <EditTextPreference
            android:defaultValue="8080"
            android:dialogTitle="@string/settings_qbittorrent_port_dialog_title"
            android:inputType="number"
            android:key="port"
            android:summary="@string/settings_qbittorrent_port_summary"
            android:title="@string/settings_qbittorrent_port_title" />
        <EditTextPreference
            android:defaultValue="admin"
            android:dialogTitle="@string/settings_qbittorrent_username_dialog_title"
            android:key="username"
            android:summary="@string/settings_qbittorrent_username_dialog_title"
            android:title="@string/settings_qbittorrent_username_title" />
        <EditTextPreference
            android:defaultValue="adminadmin"
            android:dialogTitle="@string/settings_qbittorrent_password_dialog_title"
            android:inputType="textPassword"
            android:key="password"
            android:summary="@string/settings_qbittorrent_password_summary"
            android:title="@string/settings_qbittorrent_password_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="old_version"
            android:summary="@string/settings_qbittorrent_version_summary"
            android:title="@string/settings_qbittorrent_version_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="Autorefresh"
        android:title="@string/settings_qbittorrent_autorefresh_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_refresh"
            android:summary="@string/settings_qbittorrent_autorefresh_summary"
            android:title="@string/settings_qbittorrent_autorefresh_title" />

        <ListPreference
            android:defaultValue="120000"
            android:dependency="auto_refresh"
            android:entries="@array/autorefresh"
            android:entryValues="@array/autorefreshValues"
            android:key="refresh_period"
            android:summary="@string/settings_qbittorrent_refresh_period_title"
            android:title="@string/settings_qbittorrent_refresh_period_title" />
    </PreferenceCategory>

</PreferenceScreen>