<!--
  Copyright (c) 2014 Luis M. Gallardo D..
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      Luis M. Gallardo D. - initial implementation
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_resume"
        android:icon="@drawable/ic_action_resume"
        android:showAsAction="ifRoom"
        android:title="@string/action_resume"/>
    <item
        android:id="@+id/action_pause"
        android:icon="@drawable/ic_action_pause"
        android:showAsAction="ifRoom"
        android:title="@string/action_pause"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

</menu>